--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -8,7 +8,7 @@
 <body>
 
 <header>
-    <% include ./partials/_header/ %>
+    <% include partials/_header/ %>
 </header>
 
       <p> List of shortened URLs: </p>
