--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <% include ./partials/_header %>
+    <% include partials/_header %>
 </header>
       <p> THE URL: </p>
       <h3>The shortened version of <%= urls.find(x => x.id == shortURL).long %>  is <%= shortURL %> </h3>
