implemented delete button which works!

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,6 +9,8 @@
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/urls">URLS</a></li>
+            <li><a href="/urls/new">NEW</a></li>
+
         </ul>
     </div>
 
