--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -15,9 +15,16 @@
 
       <% urls.forEach ( (x) => { %>
 
+      <% if (x.id != null) { %>
+      <li><a href="/urls/<%= x.id %>"><%= x.long %></a>
+        <form method="POST" action="/urls/<%= x.id %>/delete">
+          <input type="submit" value="Delete">
+        </form>
 
-      <li><a href="/urls/<%= x.id %>"><%= x.long %></a></li>
+      </li>
 
-      <% }) %>
+      <% }}) %>
+
+
 </body>
 </html>
