--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,9 +9,11 @@
 <header>
     <% include partials/_header %>
 </header>
-      <p> THE URL: </p>
-      <h3>The shortened version of <%= urls.find(x => x.id == shortURL).long %>  is <%= shortURL %> </h3>
-
-
+      <p>
+      Use this link to go to <%= urls.find(x => x.id == shortURL).long %> :
+      </p>
+      <p>
+        <a href = <%= urls.find(x => x.id == shortURL).long %> >localhost:8080/u/<%= shortURL %> </a>
+      </p>
 </body>
 </html>
