--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,11 @@
 
       <% if (x.id != null) { %>
       <li><a href="/urls/<%= x.id %>"><%= x.long %></a>
+
+        <form method="POST" action="/urls/<%= x.id %>/update">
+          <input type="submit" value="Edit">
+        </form>
+
         <form method="POST" action="/urls/<%= x.id %>/delete">
           <input type="submit" value="Delete">
         </form>
