--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,6 +13,12 @@
 
         </ul>
     </div>
+      <form action="/login" method="POST" style="margin:10px;">
+
+      <input id="login" type="text" name="login" placeholder="username" >
+
+      <input type="submit" value="Login">
+      </form>
 
 </div>
 </nav>
