--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,7 +11,7 @@
 </header>
       <h2> Your short URL is: <%= shortURL %></h2>
       <p>
-      Use this link to go to <%= urls.find(x => x.id == shortURL).long %> :
+      Use this link to go to <%= (urls.find(x => x.id === shortURL)).long %> :
       </p>
       <p>
         <a href = <%= urls.find(x => x.id == shortURL).long %> >localhost:8080/u/<%= shortURL %> </a>
