changes to correct bugs, mostly unsuccessful

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,12 +11,11 @@
 </header>
       <h2> Your short URL is: <%= shortURL %></h2>
       <p>
-      Use this link to go to <%= (urls.find(x => x.id === shortURL)).long %> :
+      Use this link to go to your website! :
       </p>
       <p>
-        <a href = <%= urls.find(x => x.id == shortURL).long %> >localhost:8080/u/<%= shortURL %> </a>
+          <a href = "<%= urls.find(x => x.id === shortURL).long %>">localhost:8080/u/<%= shortURL %> </a>
       </p>
-
       <form action="/urls/<%= shortURL %>/update" method="POST" style="margin:150px;">
 
       <input id="updURL" type="text" name="updURL" placeholder="http://" style="width: 300px">
@@ -25,3 +24,5 @@
       </form>
 </body>
 </html>
+
+
