--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,13 +11,18 @@
   </header>
   <% urls.forEach ( (x) => { %>
   <% if (x.id != null) { %>
-  <li><a href="/urls/<%= x.id %>"><%= x.long %></a>
-    <form method="POST" action="/urls/<%= x.id %>/update">
-      <input type="submit" value="Edit">
-    </form>
-    <form method="POST" action="/urls/<%= x.id %>/delete">
-      <input type="submit" value="Delete">
-    </form>
+  <li>
+    <a href="/urls/<%= x.id %>"><%= x.long %></a>
+    <ul>
+      <li>
+        <form method="POST" action="/urls/<%= x.id %>/update">
+        <input type="submit" value="Edit">
+      </form>
+    </li>
+      <li><form method="POST" action="/urls/<%= x.id %>/delete">
+        <input type="submit" value="Delete">
+      </form></li>
+    </ul>
   </li>
   <% }}) %>
 </body>
